--- a/build.gradle
+++ b/build.gradle
@@ -8,6 +8,9 @@ allprojects{
 subprojects{
 	apply plugin :'java'
 	repositories {
+		maven{
+			url "http://192.168.1.137:8081/nexus/content/groups/public/"
+		}
 		mavenLocal()
 		mavenCentral()
 	}
