--- a/repository/build.gradle
+++ b/repository/build.gradle
@@ -1,12 +1,19 @@
 buildscript {
-
-    repositories{
-    	mavenCentral()
+    dependencies {
+        classpath("org.springframework.boot:spring-boot-gradle-plugin:1.2.3.RELEASE")
     }
+	repositories {
+		maven { url "http://repo.spring.io/libs-release" }
+		mavenLocal()
+        mavenCentral()
+	}
 }
     
-    dependencies {
-    	compile project(':model')
-    	compile("org.springframework.boot:spring-boot-starter-data-jpa")
-    }
+apply plugin: 'spring-boot'
+
+dependencies {
+  	compile project(':model')
+   	compile("org.springframework.boot:spring-boot-starter-data-jpa")
+   	runtime("com.h2database:h2")
+}
     
