--- a/repository/.project
+++ b/repository/.project
@@ -3,6 +3,7 @@
 	<name>repository</name>
 	<comment></comment>
 	<projects>
+		<project>model</project>
 	</projects>
 	<buildSpec>
 		<buildCommand>
