--- a/repository/repository.gradle
+++ b/repository/repository.gradle
@@ -1,10 +1,11 @@
 buildscript {
     dependencies {
         classpath("org.springframework.boot:spring-boot-gradle-plugin:1.2.3.RELEASE")
+        classpath('org.gradle.api.plugins:gradle-tomcat-plugin:0.9.9')
     }
 	repositories {
 		maven { url "http://repo.spring.io/libs-release" }
-		mavenLocal()
+        mavenLocal()
         mavenCentral()
 	}
 }
@@ -12,7 +13,6 @@ buildscript {
 apply plugin: 'spring-boot'
 
 dependencies {
-  	compile project(':model')
    	compile("org.springframework.boot:spring-boot-starter-data-jpa")
    	runtime("com.h2database:h2")
 }
