--- a/build.gradle
+++ b/build.gradle
@@ -3,10 +3,13 @@ ext.projectIds = ['group': 'com.jc', 'version': '0.1']
 allprojects{
 	group = projectIds.group
 	version = projectIds.version
+	apply plugin: 'eclipse'
 }
 
 subprojects{
 	apply plugin :'java'
+	sourceCompatibility = 1.8
+	targetCompatibility = 1.8
 	repositories {
 		maven{
 			url "http://192.168.1.137:8081/nexus/content/groups/public/"
@@ -15,4 +18,3 @@ subprojects{
 		mavenCentral()
 	}
 }
-
