--- a/.project
+++ b/.project
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <projectDescription>
-	<name>GradleMulti</name>
+	<name>GradleMulit</name>
 	<comment></comment>
 	<projects>
 	</projects>
@@ -17,7 +17,7 @@
 	</natures>
 	<filteredResources>
 		<filter>
-			<id>1429064504930</id>
+			<id>1429108883887</id>
 			<name></name>
 			<type>26</type>
 			<matcher>
