--- a/settings.gradle
+++ b/settings.gradle
@@ -1,4 +1,4 @@
-include "model","repository","web"
+include "repository","web","model"
 rootProject.children.each {
 	it.buildFileName = it.name + '.gradle'
 }
