--- a/repository/repository.gradle
+++ b/repository/repository.gradle
@@ -1,7 +1,6 @@
 buildscript {
     dependencies {
         classpath("org.springframework.boot:spring-boot-gradle-plugin:1.2.3.RELEASE")
-        classpath('org.gradle.api.plugins:gradle-tomcat-plugin:0.9.9')
     }
 	repositories {
 		maven { url "http://repo.spring.io/libs-release" }
@@ -15,5 +14,5 @@ apply plugin: 'spring-boot'
 dependencies {
    	compile("org.springframework.boot:spring-boot-starter-data-jpa")
    	runtime("com.h2database:h2")
+   	compile project(":model")
 }
-    
