--- a/web/src/main/resources/application.properties
+++ b/web/src/main/resources/application.properties
@@ -3,7 +3,7 @@ spring.thymeleaf.cache=false
 
 #SECURITY
 security.basic.enabled: false
-logging.level.org.springframework.web: INFO
+logging.level.org.springframework.web: DEBUG
 logging.level.org.springframework.security:INFO
 
 #DATASOURCE
