--- a/web/src/main/resources/application-dev.properties
+++ b/web/src/main/resources/application-dev.properties
@@ -4,7 +4,7 @@ spring.thymeleaf.cache=false
 #SECURITY
 security.basic.enabled: false
 logging.level.org.springframework.web: DEBUG
-logging.level.org.springframework.security:INFO
+logging.level.org.springframework.security:DEBUG
 
 #DATASOURCE
 spring.jpa.hibernate.ddl-auto=""
