--- a/web/web.gradle
+++ b/web/web.gradle
@@ -17,5 +17,6 @@ dependencies{
     compile("org.springframework.boot:spring-boot-starter-web")
     compile("org.springframework.boot:spring-boot-starter-thymeleaf")
     compile("org.springframework.boot:spring-boot-starter-security")
+    compile("org.thymeleaf.extras:thymeleaf-extras-springsecurity3")
 	compile project(':repository')
 }
