add kaptcha logic

--- a/repository/repository.gradle
+++ b/repository/repository.gradle
@@ -15,5 +15,6 @@ dependencies {
    	compile("org.springframework.boot:spring-boot-starter-data-jpa")
    	compile("com.google.guava:guava:18.0")
    	runtime("com.h2database:h2")
+   	compile('org.google:captcha:2.3.2')
    	compile project(":model")
 }
