--- a/web/src/main/resources/application-dev.properties
+++ b/web/src/main/resources/application-dev.properties
@@ -3,8 +3,8 @@ spring.thymeleaf.cache=false
 
 #SECURITY
 security.basic.enabled: false
-logging.level.org.springframework.web: DEBUG
-logging.level.org.springframework.security:DEBUG
+logging.level.org.springframework.web: INFO
+logging.level.org.springframework.security:INFO
 
 #DATASOURCE
 spring.jpa.hibernate.ddl-auto=""
