--- a/web/src/main/resources/application-dev.properties
+++ b/web/src/main/resources/application-dev.properties
@@ -13,3 +13,13 @@ spring.jpa.hibernate.ddl-auto=""
 spring.jpa.show-sql:true
 spring.data.jpa.repositories.enabled=true
 logging.level.org.hibernate.type:TRACE
+
+#utf8
+spring.messages.encoding=UTF-8
+server.tomcat.uri-encoding=UTF-8
+spring.http.encoding.charset=UTF-8
+spring.thymeleaf.mode=HTML5
+spring.thymeleaf.encoding=UTF-8
+
+signup.captcha=验证码错误
+signup.confirm=两次密码不一致
