--- a/model/model.gradle
+++ b/model/model.gradle
@@ -12,4 +12,5 @@ buildscript {
 apply plugin: 'spring-boot'
 dependencies {
    	compile("org.springframework.boot:spring-boot-starter-data-jpa")
+   	compile("org.hibernate:hibernate-validator")
 }
