--- a/web/web.gradle
+++ b/web/web.gradle
@@ -18,5 +18,6 @@ dependencies{
     compile("org.springframework.boot:spring-boot-starter-thymeleaf")
     compile("org.springframework.boot:spring-boot-starter-security")
     compile("org.thymeleaf.extras:thymeleaf-extras-springsecurity3")
+    compile('com.itextpdf:itextpdf:5.5.5')
 	compile project(':repository')
 }
