--- a/repository/repository.gradle
+++ b/repository/repository.gradle
@@ -17,5 +17,6 @@ dependencies {
    	runtime("com.h2database:h2")
    	compile('org.google:captcha:2.3.2')
    	compile("org.hibernate:hibernate-validator")
+   	compile("com.alibaba:fastjson:1.2.5")
    	compile project(":model")
 }
