change admin package from web to admin

--- a/web/src/main/resources/application.yml
+++ b/web/src/main/resources/application.yml
@@ -23,7 +23,7 @@ spring:
 
 logging:
   level.org.springframework.web: INFO
-  level.org.springframework.security: INFO
+  level.org.springframework.security: DEBUG
   level.org.hibernate.type: TRACE
 ---
 spring:
