--- a/admin/src/main/resources/application.yml
+++ b/admin/src/main/resources/application.yml
@@ -22,7 +22,7 @@ spring:
   profiles: dev
 
 logging:
-  level.org.springframework.web: INFO
+  level.org.springframework.web: DEBUG
   level.org.springframework.security: INFO
   level.org.hibernate.type: TRACE
 ---
