--- a/web/src/main/resources/application.yml
+++ b/web/src/main/resources/application.yml
@@ -20,6 +20,8 @@ login:
 ---
 spring:
   profiles: dev
+  redis.host: 192.168.1.137
+  redis.port: 6379
 
 logging:
   level.org.springframework.web: INFO
