--- a/web/web.gradle
+++ b/web/web.gradle
@@ -20,5 +20,6 @@ dependencies{
     compile("org.thymeleaf.extras:thymeleaf-extras-springsecurity3")
     compile('com.itextpdf:itextpdf:5.5.5')
     compile('org.json:json:20141113')
+    testCompile('org.springframework.boot:spring-boot-starter-test')
 	compile project(':repository')
 }
