--- a/admin/admin.gradle
+++ b/admin/admin.gradle
@@ -17,5 +17,6 @@ dependencies{
     compile("org.springframework.boot:spring-boot-starter-web")
     compile("org.springframework.boot:spring-boot-starter-thymeleaf")
     compile("org.springframework.boot:spring-boot-starter-security")
+    compile("commons-fileupload:commons-fileupload:1.3.1")
 	compile project(':repository')
 }
