--- a/repository/repository.gradle
+++ b/repository/repository.gradle
@@ -19,5 +19,7 @@ dependencies {
    	compile('org.google:captcha:2.3.2')
    	compile("org.hibernate:hibernate-validator")
     compile('org.json:json:20141113')
+    compile('net.sf.ehcache:ehcache:2.10.0')
+    
    	compile project(":model")
 }
