--- a/web/web.gradle
+++ b/web/web.gradle
@@ -3,9 +3,9 @@ buildscript {
         classpath("org.springframework.boot:spring-boot-gradle-plugin:1.2.3.RELEASE")
     }
 	repositories {
-		maven { url "http://repo.spring.io/libs-release" }
+		maven {url "http://repo.spring.io/libs-release"}
 		maven {url "http://repo.spring.io/libs-snapshot"}
-    	maven {url 'http://repo.spring.io/milestone' }
+    	maven {url 'http://repo.spring.io/milestone'}
         mavenLocal()
         mavenCentral()
 	}
@@ -21,5 +21,6 @@ dependencies{
     compile('com.itextpdf:itextpdf:5.5.5')
     compile('org.json:json:20141113')
     testCompile('org.springframework.boot:spring-boot-starter-test')
+    testCompile('org.mockito:mockito-all:1.9.5')
 	compile project(':repository')
 }
