--- a/repository/repository.gradle
+++ b/repository/repository.gradle
@@ -14,12 +14,12 @@ apply plugin: 'spring-boot'
 dependencies {
    	compile("org.springframework.boot:spring-boot-starter-data-jpa")
    	compile("org.springframework.boot:spring-boot-starter-redis")
+   	compile("org.springframework.boot:spring-boot-starter-data-elasticsearch")
    	compile("com.google.guava:guava:18.0")
    	runtime("com.h2database:h2")
    	compile('org.google:captcha:2.3.2')
    	compile("org.hibernate:hibernate-validator")
     compile('org.json:json:20141113')
     compile('net.sf.ehcache:ehcache:2.10.0')
-   	compile('commons-beanutils:commons-beanutils:1.9.2')
    	compile project(":model")
 }
