--- a/web/src/main/resources/application.yml
+++ b/web/src/main/resources/application.yml
@@ -25,8 +25,8 @@ spring:
   data.elasticsearch.cluster-nodes: 192.168.1.137:9300
 
 logging:
-  level.org.springframework.web: INFO
-  level.org.springframework.security: DEBUG
+  level.org.springframework.web: DEBUG
+  level.org.springframework.security: INFO
   level.org.hibernate.type: TRACE
 ---
 spring:
