--- a/repository/repository.gradle
+++ b/repository/repository.gradle
@@ -18,6 +18,7 @@ dependencies {
    	compile("com.google.guava:guava:18.0")
    	runtime("com.h2database:h2")
    	compile('org.google:captcha:2.3.2')
+   	compile('com.itextpdf:itextpdf:5.5.5')
    	compile("org.hibernate:hibernate-validator")
     compile('org.json:json:20141113')
     compile('net.sf.ehcache:ehcache:2.10.0')
