--- a/model/model.gradle
+++ b/model/model.gradle
@@ -13,4 +13,5 @@ apply plugin: 'spring-boot'
 dependencies {
    	compile("org.springframework.boot:spring-boot-starter-data-jpa")
    	compile("org.hibernate:hibernate-validator")
+   	compile("org.springframework.boot:spring-boot-starter-web")
 }
