--- a/web/src/main/resources/application.yml
+++ b/web/src/main/resources/application.yml
@@ -25,9 +25,9 @@ spring:
   data.elasticsearch.cluster-nodes: 192.168.1.137:9300
 
 logging:
-  level.org.springframework.web: DEBUG
-  level.org.springframework.security: INFO
-  level.org.hibernate.type: TRACE
+  level.org.springframework.web: INFO
+  level.org.springframework.security: DEBUG
+  level.org.hibernate.type: INFO
 ---
 spring:
    profiles: prod
