--- a/web/web.gradle
+++ b/web/web.gradle
@@ -19,6 +19,7 @@ dependencies{
     compile("org.springframework.boot:spring-boot-starter-security")
     compile("org.thymeleaf.extras:thymeleaf-extras-springsecurity3")
     compile('org.json:json:20141113')
+    compile('com.itextpdf:itextpdf:5.5.5')
     testCompile('org.springframework.boot:spring-boot-starter-test')
     testCompile('org.mockito:mockito-all:1.9.5')
 	compile project(':repository')
