--- a/build.gradle
+++ b/build.gradle
@@ -9,6 +9,9 @@ allprojects{
 subprojects{
 	apply plugin :'java'
 	repositories {
+		maven{
+			url "http://maven.oschina.net/content/groups/public/"
+		}
 		mavenLocal()
 		mavenCentral()
 	}
