--- a/admin/admin.gradle
+++ b/admin/admin.gradle
@@ -12,12 +12,17 @@ buildscript {
 }
 
 apply plugin: 'spring-boot'
-        
+apply plugin: 'war'
+
+configurations {
+    providedRuntime
+} 
 dependencies{
     compile("org.springframework.boot:spring-boot-starter-web")
     compile("org.springframework.boot:spring-boot-starter-thymeleaf")
     compile("org.springframework.boot:spring-boot-starter-security")
     compile("org.apache.poi:poi-ooxml:3.12")
     compile("commons-fileupload:commons-fileupload:1.3.1")
+    providedRuntime("org.springframework.boot:spring-boot-starter-tomcat")
 	compile project(':repository')
 }
