--- a/web/src/main/resources/application.yml
+++ b/web/src/main/resources/application.yml
@@ -1,5 +1,5 @@
 spring:
-  profiles.active: dev
+  profiles.active: prod
   thymeleaf.cache: false
   jpa.hibernate.ddl-auto: ""
   data.jpa.repositories.enabled: true
@@ -40,6 +40,11 @@ spring:
         username: root
         password: 1234
         initialize: false
+   jpa:
+     properties:
+       hibernate:
+        dialect: org.hibernate.dialect.MySQL5Dialect
+
 
 logging:
   level.org.springframework.web: INFO
