--- a/web/src/main/resources/application.yml
+++ b/web/src/main/resources/application.yml
@@ -31,12 +31,12 @@ logging:
 ---
 spring:
    profiles: prod
-   redis.host: 192.168.1.137
+   redis.host: 127.0.0.1
    redis.port: 6379
-   data.elasticsearch.cluster-nodes: 192.168.1.137:9300
+   data.elasticsearch.cluster-nodes: 127.0.0.1:9300
    datasource:
         driverClassName: com.mysql.jdbc.Driver
-        url: jdbc:mysql://localhost:3306/sj?useUnicode=true&characterEncoding=utf-8&zeroDateTimeBehavior=convertToNull&transformedBitIsBoolean=true
+        url: jdbc:mysql://127.0.0.1:3306/sj?useUnicode=true&characterEncoding=utf-8&zeroDateTimeBehavior=convertToNull&transformedBitIsBoolean=true
         username: admin
         password: 123456
         initialize: false
