--- a/web/src/main/resources/application.yml
+++ b/web/src/main/resources/application.yml
@@ -1,5 +1,5 @@
 spring:
-  profiles.active: prod
+  profiles.active: dev
   thymeleaf.cache: false
   jpa.hibernate.ddl-auto: ""
   data.jpa.repositories.enabled: true
@@ -11,6 +11,7 @@ security:
 
 server:
   tomcat.uri-encoding: UTF-8
+  port: 8090
 
 login:
   passwordError: 两次密码输入不一致
@@ -30,15 +31,15 @@ logging:
   level.org.hibernate.type: INFO
 ---
 spring:
-   profiles: prod
-   redis.host: 192.168.1.137
+   redis.host: localhost
    redis.port: 6379
-   data.elasticsearch.cluster-nodes: 192.168.1.137:9300
+   data.elasticsearch.cluster-nodes: localhost:9300
+   profiles: prod
    datasource:
         driverClassName: com.mysql.jdbc.Driver
-        url: jdbc:mysql://localhost:3306/sj?useUnicode=true&characterEncoding=utf-8&zeroDateTimeBehavior=convertToNull&transformedBitIsBoolean=true
-        username: admin
-        password: 123456
+        url: jdbc:mysql://localhost:3306/sj
+        username: root
+        password: root
         initialize: false
    jpa:
      properties:
