--- a/web/src/main/resources/application.yml
+++ b/web/src/main/resources/application.yml
@@ -27,7 +27,7 @@ spring:
 
 logging:
   level.org.springframework.web: INFO
-  level.org.springframework.security: DEBUG
+  level.org.springframework.security: INFO
   level.org.hibernate.type: INFO
 ---
 spring:
