--- a/admin/src/main/resources/application.yml
+++ b/admin/src/main/resources/application.yml
@@ -1,13 +1,10 @@
 spring:
   profiles.active: dev
   thymeleaf.cache: false
+  jpa.hibernate.ddl-auto: ""
   data.jpa.repositories.enabled: true
+  jpa.show-sql: true
   http.encoding.charset: UTF-8
-  jpa:
-    show-sql: true
-    hibernate:
-      dll-auto: none
-
 
 security:
   basic.enabled: false
@@ -23,9 +20,6 @@ login:
 ---
 spring:
   profiles: dev
-  redis.host: 192.168.1.137
-  redis.port: 6379
-  data.elasticsearch.cluster-nodes: 192.168.1.137:9300
 
 logging:
   level.org.springframework.web: INFO
