search insert feature

--- a/admin/src/main/resources/application.yml
+++ b/admin/src/main/resources/application.yml
@@ -20,14 +20,16 @@ login:
 ---
 spring:
   profiles: dev
+  data.elasticsearch.cluster-nodes: 192.168.1.137:9300
 
 logging:
   level.org.springframework.web: INFO
-  level.org.springframework.security: DEBUG
+  level.org.springframework.security: INFO
   level.org.hibernate.type: INFO
 ---
 spring:
    profiles: prod
+   data.elasticsearch.cluster-nodes: localhost:9300
    datasource:
         driverClassName: com.mysql.jdbc.Driver
         url: jdbc:mysql://localhost:3306/sj
