--- a/admin/admin.gradle
+++ b/admin/admin.gradle
@@ -14,6 +14,11 @@ buildscript {
 apply plugin: 'spring-boot'
 apply plugin: 'war'
 
+war {
+    baseName = 'admin'
+    version =  '0.1'
+}
+
 configurations {
     providedRuntime
 } 
