try fix disconnect bug

--- a/web/src/main/resources/application.yml
+++ b/web/src/main/resources/application.yml
@@ -41,6 +41,8 @@ spring:
         username: root
         password: root
         initialize: false
+        testOnBorrow: true
+        validationQuery: SELECT 1
    jpa:
      properties:
        hibernate:
