--- a/admin/src/main/resources/application.yml
+++ b/admin/src/main/resources/application.yml
@@ -36,6 +36,8 @@ spring:
         username: root
         password: root
         initialize: false
+        testOnBorrow: true
+        validationQuery: SELECT 1
    jpa:
      properties:
        hibernate:
