--- a/web/src/main/resources/application.yml
+++ b/web/src/main/resources/application.yml
@@ -38,8 +38,8 @@ spring:
    datasource:
         driverClassName: com.mysql.jdbc.Driver
         url: jdbc:mysql://localhost:3306/sj
-        username: root
-        password: root
+        username: pjfpjf
+        password: 123456
         initialize: false
         testOnBorrow: true
         validationQuery: SELECT 1
