--- a/admin/src/main/resources/application.yml
+++ b/admin/src/main/resources/application.yml
@@ -1,5 +1,5 @@
 spring:
-  profiles.active: prod
+  profiles.active: dev
   thymeleaf.cache: false
   jpa.hibernate.ddl-auto: ""
   data.jpa.repositories.enabled: true
