--- a/web/src/main/resources/application.yml
+++ b/web/src/main/resources/application.yml
@@ -34,7 +34,7 @@ spring:
    profiles: prod
    redis.host: localhost
    redis.port: 6379
-   data.elasticsearch.cluster-nodes: localhost:9300
+   data.elasticsearch.cluster-nodes: 127.0.0.1:9300
    datasource:
         driverClassName: com.mysql.jdbc.Driver
         url: jdbc:mysql://localhost:3306/sj
